upgarde the note feture - add title, settings, export